Post request implementation in swagger
