# prp-api/api/swagger/swagger.yaml
@@ -4,9 +4,9 @@ info:
   title: Hello World App
 # during dev, should point to your local machine
 host: localhost:10010
-# basePath prefixes all resource paths 
+# basePath prefixes all resource paths
 basePath: /
-# 
+#
 schemes:
   # tip: remove http to make production-grade
   - http
@@ -56,7 +56,7 @@ paths:
       responses:
         "200":
           description: Success
-          
+
   /check/surveys/{userPIN}:
     x-swagger-router-controller: check-surveys
     get:
@@ -100,8 +100,23 @@ paths:
         default:
           description: Error
           schema:
-            $ref: "#/definitions/ErrorResponse"          
-            
+            $ref: "#/definitions/ErrorResponse"
+
+  /survey:
+    x-swagger-router-controller: submit-survey
+    post:
+      description: "submit survey instance records"
+      operationId: submitSurvey
+      parameters:
+        - name: body
+          in: body
+          description: "The body"
+          required: true
+          schema:
+            $ref: "#/definitions/Text"
+      responses:
+       "200":
+          description: Success
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
@@ -124,6 +139,27 @@ definitions:
     properties:
       message:
         type: string
+  Text:
+    type: object
+    properties:
+      surveyInstanceID:
+        type: integer
+      timeStamp:
+        type: integer
+      surveyResults:
+        type: array
+        items:
+          properties:
+            quesID:
+              type: string
+            selectedOptions:
+              type: array
+              items:
+                type: string
+            bodyPain:
+              type: array
+              items:
+                type: string
   ErrorResponse:
     required:
       - message
